--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_map_cancellable_tile_provider: ^2.0.0
   latlong2: ^0.9.1
   http: ^1.2.1
+  provider: ^6.0.3
   supabase_flutter: ^2.8.4
   flutter_dotenv: ^5.2.1
 
@@ -28,6 +29,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/config/.env
 
   fonts:
     - family: RubikMonoOne
