--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   provider: ^6.0.3
   supabase_flutter: ^2.8.4
   flutter_dotenv: ^5.2.1
+  image_picker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
