--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   supabase_flutter: ^2.8.4
   flutter_dotenv: ^5.2.1
   image_picker: ^1.1.0
+  path: ^1.8.3
+  mime: ^1.0.4
 
 dev_dependencies:
   flutter_test:
