--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   image_picker: ^1.1.0
   path: ^1.8.3
   mime: ^1.0.4
+  youtube_player_iframe: ^5.2.1
+  youtube_player_flutter: ^9.1.1
+
 
 dev_dependencies:
   flutter_test:
